codex-rs/tui_app_server/src/chatwidget/snapshots/codex_tui__chatwidget__tests__model_reasoning_selection_popup_extra_high_warning.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
  为 gpt-5.1-codex-max 选择推理级别

  1. 低                   更快响应，较轻推理
  2. 中（默认）      平衡速度与推理深度，适合日常任务
  3. 高                  更深的推理深度，适合复杂问题
› 4. Extra high（当前）  超高推理深度，适合复杂问题
                           ⚠ Extra high 推理强度可能会快速消耗
                           Plus 计划的速率限制额度。

  按  enter 确 认 ， 按  esc 返 回
