codex-rs/tui_app_server/src/chatwidget/snapshots/codex_tui__chatwidget__tests__model_selection_popup.snap
---
source: tui_app_server/src/chatwidget/tests.rs
expression: popup
---
  选 择 模 型 与 推 理 强 度
  可 通 过 运 行  codex -m <model_name> 或 在  config.toml 中 访 问 旧 版 模 型

› 1. gpt-5.3-codex（ 默 认 ）   Latest frontier agentic coding model.
  2. gpt-5.4                Latest frontier agentic coding model.
  3. gpt-5.2-codex          Frontier agentic coding model.
  4. gpt-5.1-codex-max      Codex-optimized flagship for deep and fast
                            reasoning.
  5. gpt-5.2                Latest frontier model with improvements across
                            knowledge, reasoning and coding
  6. gpt-5.1-codex-mini     Optimized for codex. Cheaper, faster, but less
                            capable.

  按  enter 选 择 推 理 强 度 ， 或 按  esc 关 闭 。
